--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
     "version": 2,
+    "name": "5easier-landing",
     "builds": [
       { "src": "api/*.js", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/$1.js" },
-      { "src": "/", "dest": "/public/index.html" },
-      { "src": "/(.*)", "dest": "/public/$1" }
+      { "src": "/", "dest": "/index.html" }
     ]
-  }  
+  }
+  
