--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,9 @@
       { "src": "api/*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1.js" },
-      { "src": "/", "dest": "/index.html" }
-    ]
+        { "src": "/api/(.*)", "dest": "/api/$1.js" },
+        { "src": "/", "dest": "/public/index.html" }, 
+        { "src": "/(.*)", "dest": "/public/$1" }
+      ]
   }
   
